fix: preload update on mobile screen

--- a/src/feature/ui/AppLoader/AppLoader.module.css
+++ b/src/feature/ui/AppLoader/AppLoader.module.css
@@ -50,8 +50,8 @@
 
 .container span::after {
   position: absolute;
-  bottom: 0%;
-  left: -1%;
+  bottom: -12%;
+  left: -1.5%;
 
   width: 12%;
   height: 10px;
